--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+        integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
     <title>Custom Navbar</title>
 </head>
 
@@ -24,43 +26,137 @@
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav m-auto">
                     <li class="nav-item">
-                        <a class="nav-link active-nav" href="index.html">Home</a>
+                        <a class="nav-link active-nav" href="index.html">HOME</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button"
-                            data-bs-toggle="dropdown">Dropdown</a>
-                        <ul class="dropdown-menu">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">SERVICES</a>
+                        <ul class="dropdown-menu mt-2 dropdown-content dropdown-content-service">
+                            <li><a class="dropdown-item" href="#">Link</a></li>
+                            <li><a class="dropdown-item" href="#">Another link</a></li>
+                            <li><a class="dropdown-item" href="#">A third link</a></li>
                             <li><a class="dropdown-item" href="#">Link</a></li>
                             <li><a class="dropdown-item" href="#">Another link</a></li>
                             <li><a class="dropdown-item" href="#">A third link</a></li>
                         </ul>
-                    </li> -->
-                    <li>
-                        <div class="dropdown">
-                            <button class="dropbtn">Dropdown</button>
-                            <div class="dropdown-content">
-                              <a href="#">Link 1</a>
-                              <a href="#">Link 2</a>
-                              <a href="#">Link 3</a>
-                            </div>
-                          </div>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">SOLUTIONS</a>
+                        <ul class="dropdown-menu dropdown-content">
+                            <li><a class="dropdown-item" href="#">Link</a></li>
+                            <li><a class="dropdown-item" href="#">Another link</a></li>
+                            <li><a class="dropdown-item" href="#">A third link</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">TECHNOLOGIES</a>
+                        <ul class="dropdown-menu dropdown-content">
+                            <li><a class="dropdown-item" href="#">Link</a></li>
+                            <li><a class="dropdown-item" href="#">Another link</a></li>
+                            <li><a class="dropdown-item" href="#">A third link</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">LOCATION</a>
+                        <ul class="dropdown-menu dropdown-content">
+                            <li><a class="dropdown-item" href="#">Link</a></li>
+                            <li><a class="dropdown-item" href="#">Another link</a></li>
+                            <li><a class="dropdown-item" href="#">A third link</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">CASE STUDIES</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">INSIGHTS</a>
+                        <ul class="dropdown-menu dropdown-content">
+                            <li><a class="dropdown-item" href="#">Link</a></li>
+                            <li><a class="dropdown-item" href="#">Another link</a></li>
+                            <li><a class="dropdown-item" href="#">A third link</a></li>
+                        </ul>
                     </li>
                 </ul>
+                <div class="nav-btn-box">
+                    <span><i class="bi bi-arrow-right"></i></i></span>
+                    <button class="btn" type="button">Get Start</button>
 
-                <button class="btn btn-primary me-2" type="button">Get Start</button>
+                </div>
             </div>
         </div>
     </nav>
 
     <!-- Navbar -->
+    <!-- Hero Section -->
 
+    <section class="hero-section">
+        <video autoplay muted loop>
+            <source src="./assets/poster.mp4" type="video/mp4" />
+        </video>
+        <div class="overlay">
+        </div>
+        <div class="hero-content m-auto">
+            <div>
+                <h3 class="text-center hero-sub-heading">Perfect Blend of Technology & Creativity!</h3>
+                <h1 class="text-center hero-heading">Top-Notch App Development <br> Company </h1>
+                <div class="hero-button text-center">
+                    <button class="btn-1 ">HAVE AN IDEA LET'S TALK</button>
+                    <button class="btn-2">GET A QOUTE</button>
+                </div>
+            </div>
 
+            <div class="hero-brands">
+                <img src="./assets/image (1).webp" alt="">
+                <img src="./assets/image (2).webp" alt="">
+                <img src="./assets/image (3).webp" alt="">
+                <img src="./assets/image (4).webp" alt="">
+                <img src="./assets/image.webp" alt="">
+
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
+    </section>
+    <!-- Hero Section -->
+    <!-- Service Section -->
+    <!-- <section class="service-section">
+        <h3>One Stop Solution</h3>
+        <h2>Our Top-Notch App Development Services</h2>
+        <hr class="service-hr">
+
+        <div class="service-card-section row">
+           
+            <div class="service-card col col-lg-3">
+                <div class="service-card-inner">
+                    <div class="service-card-front text-left">
+                        <div class="card-content mt-3">
+                            <h4 class="m-3">IOS App <br> Development Services</h4>
+                            <p class="m-3">We help dreamers unleash their business potential
+                                by providing them with feature-rich, iOS Applications.</p>
+                        </div>
+                        <div>
+                            <img src="./assets/Card Img/apple.faea7f40.webp" alt="Avatar"
+                                style="width:100px;height:150px;"
+                                class="">
+                        </div>
+                    </div>
+                    <div class="service-card-back">
+                        <h1>John Doe</h1>
+                        <p>Architect & Engineer</p>
+                        <p>We love that guy</p>
+                    </div>
+                </div>
+            </div>
+        
+    </section> -->
+    <div class="row container">
+        <div class="col col-lg-3 col-md-3 col-sm-10 col-xs-10">1</div>
+        <div class="col col-lg-3 col-md-3 col-sm-10 col-xs-10">2</div>
+        <div class="col col-lg-3 col-md-3 col-sm-10 col-xs-10">3</div>
+        <div class="col col-lg-3 col-md-3 col-sm-10 col-xs-10">4</div>
+
+    </div>
+    <!-- Service Section -->
 
 
 
